fix overflow issue in code highlights

--- a/src/site.scss
+++ b/src/site.scss
@@ -96,7 +96,7 @@ ul {
 
 code, .highlight {
 	font-size: 14px;
-	overflow: scroll;
+	overflow: auto;
 }
 
 .code {
